--- a/Disaster_response_pipeline/ML Pipeline Preparation.ipynb
+++ b/Disaster_response_pipeline/ML Pipeline Preparation.ipynb
@@ -14,24 +14,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import libraries\n"
+    "# import libraries\n",
+    "import nltk\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer, CountVectorizer\n",
+    "from sklearn.base import BaseEstimator,TransformerMixin\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.tokenize import word_tokenize\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "database_filepath = \"disaster_response_db.db\"\n",
+    "engine = create_engine('sqlite:///' + database_filepath)\n",
+    "table_name = os.path.basename(database_filepath).replace(\".db\",\"\") + \"_table\"\n",
+    "df = pd.read_sql_table(table_name,engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>message</th>\n",
+       "      <th>original</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>related</th>\n",
+       "      <th>request</th>\n",
+       "      <th>offer</th>\n",
+       "      <th>aid_related</th>\n",
+       "      <th>medical_help</th>\n",
+       "      <th>medical_products</th>\n",
+       "      <th>...</th>\n",
+       "      <th>aid_centers</th>\n",
+       "      <th>other_infrastructure</th>\n",
+       "      <th>weather_related</th>\n",
+       "      <th>floods</th>\n",
+       "      <th>storm</th>\n",
+       "      <th>fire</th>\n",
+       "      <th>earthquake</th>\n",
+       "      <th>cold</th>\n",
+       "      <th>other_weather</th>\n",
+       "      <th>direct_report</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Weather update - a cold front from Cuba that c...</td>\n",
+       "      <td>Un front froid se retrouve sur Cuba ce matin. ...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Is the Hurricane over or is it not over</td>\n",
+       "      <td>Cyclone nan fini osinon li pa fini</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Looking for someone but no name</td>\n",
+       "      <td>Patnm, di Maryani relem pou li banm nouvel li ...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
+       "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>says: west side of Haiti, rest of the country ...</td>\n",
+       "      <td>facade ouest d Haiti et le reste du pays aujou...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                            message  \\\n",
+       "0   2  Weather update - a cold front from Cuba that c...   \n",
+       "1   7            Is the Hurricane over or is it not over   \n",
+       "2   8                    Looking for someone but no name   \n",
+       "3   9  UN reports Leogane 80-90 destroyed. Only Hospi...   \n",
+       "4  12  says: west side of Haiti, rest of the country ...   \n",
+       "\n",
+       "                                            original   genre  related  \\\n",
+       "0  Un front froid se retrouve sur Cuba ce matin. ...  direct        1   \n",
+       "1                 Cyclone nan fini osinon li pa fini  direct        1   \n",
+       "2  Patnm, di Maryani relem pou li banm nouvel li ...  direct        1   \n",
+       "3  UN reports Leogane 80-90 destroyed. Only Hospi...  direct        1   \n",
+       "4  facade ouest d Haiti et le reste du pays aujou...  direct        1   \n",
+       "\n",
+       "   request  offer  aid_related  medical_help  medical_products  ...  \\\n",
+       "0        0      0            0             0                 0  ...   \n",
+       "1        0      0            1             0                 0  ...   \n",
+       "2        0      0            0             0                 0  ...   \n",
+       "3        1      0            1             0                 1  ...   \n",
+       "4        0      0            0             0                 0  ...   \n",
+       "\n",
+       "   aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n",
+       "0            0                     0                0       0      0     0   \n",
+       "1            0                     0                1       0      1     0   \n",
+       "2            0                     0                0       0      0     0   \n",
+       "3            0                     0                0       0      0     0   \n",
+       "4            0                     0                0       0      0     0   \n",
+       "\n",
+       "   earthquake  cold  other_weather  direct_report  \n",
+       "0           0     0              0              0  \n",
+       "1           0     0              0              0  \n",
+       "2           0     0              0              0  \n",
+       "3           0     0              0              0  \n",
+       "4           0     0              0              0  \n",
+       "\n",
+       "[5 rows x 40 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'message', 'original', 'genre', 'related', 'request', 'offer',\n",
+       "       'aid_related', 'medical_help', 'medical_products', 'search_and_rescue',\n",
+       "       'security', 'military', 'child_alone', 'water', 'food', 'shelter',\n",
+       "       'clothing', 'money', 'missing_people', 'refugees', 'death', 'other_aid',\n",
+       "       'infrastructure_related', 'transport', 'buildings', 'electricity',\n",
+       "       'tools', 'hospitals', 'shops', 'aid_centers', 'other_infrastructure',\n",
+       "       'weather_related', 'floods', 'storm', 'fire', 'earthquake', 'cold',\n",
+       "       'other_weather', 'direct_report'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load data from database\n",
-    "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
-    "df = \n",
-    "X = \n",
-    "Y = "
+    "X = df['message']\n",
+    "Y = df.iloc[:,4:]"
    ]
   },
   {
@@ -43,12 +320,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize(text):\n",
-    "    pass"
+    "    # Replace all urls with a urlplaceholder string\n",
+    "    url_regex = 'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'\n",
+    "    \n",
+    "    # Extract all the urls from the provided text \n",
+    "    detected_urls = re.findall(url_regex, text)\n",
+    "    \n",
+    "    # Replace url with a url placeholder string\n",
+    "    for detected_url in detected_urls:\n",
+    "        text = text.replace(detected_url, \"urlplaceholder\")\n",
+    "\n",
+    "    # Extract the word tokens from the provided text\n",
+    "    tokens = nltk.word_tokenize(text)\n",
+    "    \n",
+    "    #Lemmanitizer to remove inflectional and derivationally related forms of a word\n",
+    "    lemmatizer = nltk.WordNetLemmatizer()\n",
+    "\n",
+    "    # List of clean tokens\n",
+    "    clean_tokens = [lemmatizer.lemmatize(w).lower().strip() for w in tokens]\n",
+    "    return clean_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StartingVerbExtractor(BaseEstimator, TransformerMixin):\n",
+    "    \"\"\"\n",
+    "    Starting Verb Extractor class\n",
+    "    \n",
+    "    This class extract the starting verb of a sentence,\n",
+    "    creating a new feature for the ML classifier\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def starting_verb(self, text):\n",
+    "        sentence_list = nltk.sent_tokenize(text)\n",
+    "        for sentence in sentence_list:\n",
+    "            pos_tags = nltk.pos_tag(tokenize(sentence))\n",
+    "            first_word, first_tag = pos_tags[0]\n",
+    "            if first_tag in ['VB', 'VBP'] or first_word == 'RT':\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "    # Given it is a tranformer we can return the self \n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        X_tagged = pd.Series(X).apply(self.starting_verb)\n",
+    "        return pd.DataFrame(X_tagged)"
    ]
   },
   {
@@ -65,7 +392,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = "
+    "pipeline0 = Pipeline([\n",
+    "        ('features', FeatureUnion([\n",
+    "\n",
+    "            ('text_pipeline', Pipeline([\n",
+    "                ('vect', CountVectorizer(tokenizer=tokenize)),\n",
+    "                ('tfidf', TfidfTransformer())\n",
+    "            ])),\n",
+    "\n",
+    "            ('starting_verb', StartingVerbExtractor())\n",
+    "        ])),\n",
+    "\n",
+    "        ('classifier', MultiOutputClassifier(AdaBoostClassifier()))\n",
+    "    ])\n",
+    "\n",
+    "\n",
+    "pipeline1 = Pipeline([\n",
+    "        ('features', FeatureUnion([\n",
+    "\n",
+    "            ('text_pipeline', Pipeline([\n",
+    "                ('count_vectorizer', CountVectorizer(tokenizer=tokenize)),\n",
+    "                ('tfidf_transformer', TfidfTransformer())\n",
+    "            ]))\n",
+    "            \n",
+    "        ])),\n",
+    "\n",
+    "        ('classifier', MultiOutputClassifier(AdaBoostClassifier()))\n",
+    "    ])"
    ]
   },
   {
@@ -197,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
